[workspace]
members = ["runner"]
resolver = "2"

[package]
name = "chunkfs"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Piletskii-Oleg/chunkfs"
readme = "README.md"
description = "An in-memory file system that can be used to compare different deduplication algorithms"
categories = ["algorithms", "filesystem"]
keywords = ["filesystem", "cdc", "chunking", "deduplication"]

[profile.release-deb]
inherits = "release"
debug = true

[dependencies]
cdc-chunkers = { version = "0.1.0", optional = true }
sha2 = { version = "0.10", optional = true }
uuid = { version = "1", features = ["fast-rng", "v4"], optional = true }
rand = { version = "0.8", optional = true }
itertools = { version = "0.14", optional = true }
fastcdc = { version = "3", optional = true }

[features]
chunkers = ["cdc-chunkers", "fastcdc"]
hashers = ["sha2"]
bench = ["uuid", "rand", "itertools"]

[dev-dependencies]
chunkfs = { path = ".", features = ["chunkers", "hashers", "bench"] }
criterion = "0.5"
sha3 = "0.10"
approx = "0.5"
tempfile = "3.14"
serde = "1"
serde_json = "1"

[[bench]]
name = "write_read"
harness = false

[[bench]]
name = "chunker_sizes"
harness = false