[workspace]
members = ["chunkfs-cli"]
resolver = "2"

[package]
name = "chunkfs"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Piletskii-Oleg/chunkfs"
readme = "README.md"
description = "An in-memory file system that can be used to compare different deduplication algorithms"
categories = ["algorithms", "filesystem"]
keywords = ["filesystem", "cdc", "chunking", "deduplication"]

[profile.release-deb]
inherits = "release"
debug = true

[dependencies]
cdc-chunkers = { version = "0.1.0", optional = true }
sha2 = { version = "0.10", optional = true }
uuid = { version = "1", features = ["fast-rng", "v4"], optional = true }
rand = { version = "0.9", optional = true }
itertools = { version = "0.14", optional = true }
fastcdc = { version = "3", optional = true }
csv = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_with = { version = "3", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
libc = "0.2.171"
fuser = { version = "0.15.1", features = ["abi-7-28"] }

[features]
chunkers = ["cdc-chunkers", "fastcdc"]
hashers = ["sha2"]
bench = ["uuid", "rand", "itertools", "csv", "serde", "serde_with", "chrono"]

[dev-dependencies]
chunkfs = { path = ".", features = ["chunkers", "hashers", "bench"] }
criterion = "0.5"
sha3 = "0.10"
approx = "0.5"
tempfile = "3.14"
filetime = "0.2.25"

serde_json = "1"

[[bench]]
name = "write_read"
harness = false

[[bench]]
name = "chunker_sizes"
harness = false

[[bench]]
name = "fuse_write_read"
harness = false
