[package]
name = "dataset-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
ftp = "3"
tokio-util = "0.7"
futures-util = "0.3.31"
tar = "0.4"